--- a/src/css/style.css
+++ b/src/css/style.css
@@ -205,8 +205,11 @@
 		border-bottom: 2px solid #1F2181;
 		color: #1F2181 !important;
 	}
-	.our-service{
-		padding-top: 50px;
+	.our-service,.customer_say{
+		padding-top: 70px;
+	}
+	.lets-talk {
+	    padding-top: 45px;
 	}
 	.service-head{
 		padding-bottom: 30px;
@@ -234,6 +237,109 @@
 		color: #707070;
 		padding-top: 15px;
 		padding-bottom: 10px;
+	}
+	.founder-img{
+		width: 15% !important;
+		text-align: center;
+		display: inline-block !important;
+    	padding-top: 30px !important;
+	}
+	.say-text{
+		font-family: Helvetica Neue;
+		font-size: 16px;
+		padding: 120px 80px 100px 80px;
+		color: #707070;
+		background: #FAFAFA;
+		margin-top: -70px;
+	}
+	.say-person{
+		padding-top: 20px;
+
+	}
+	.say-person strong{
+		font-family: proximaNovaBold;
+
+	}
+	.contact-left{
+		position: relative;
+	}
+	.lets-header{
+		color: white;
+		font-size: 32px;
+		font-family: proximaNovaRegular;
+	}
+	.lets-header strong{
+		font-family: proximaNovaBold !important;
+	}
+	.contact-cnt{
+		position: absolute;
+		left: 20%;
+	}
+	.lets-qualify ul li{
+		font-family: proximaNovaRegular;
+		color: white;
+		font-size: 16px;
+		font-weight: bold;
+		padding: 5px 10px;
+	}
+	.form-field{
+		padding: 5px 0px;
+	}
+	.form-field input{
+		width: 300px;
+		height: 52px;
+		border: 1px solid #BFBFBF;
+		padding-left: 16px;
+		padding-top: 6px;
+		font-size: 16px;
+		font-family: proximaNovaBold;
+		color: black;
+	}
+	.form-field textarea{
+		width: 300px;
+		border: 1px solid #BFBFBF;
+		padding-left: 16px;
+		padding-top: 6px;
+		font-size: 16px;
+		font-family: proximaNovaBold;
+		color: black;
+	}
+	.formInput::-moz-placeholder {
+	   font-family: proximaNovaRegular;
+	   font-size: 15px;
+	   color: #D9D9D9;  
+	}
+	input::-webkit-input-placeholder {
+		font-family: proximaNovaRegular;
+	   font-size: 15px;
+	   color: #D9D9D9;  
+	}
+	textarea::-webkit-input-placeholder {
+		font-family: proximaNovaRegular !important;
+	   font-size: 15px !important;
+	   color: #D9D9D9 !important;  
+	}
+	textarea {
+		font-family: proximaNovaBold !important;
+	   font-size: 15px !important;
+	   color: black !important;  
+	}
+	.submit-form input{
+		background-image: linear-gradient(to left, #2024e3, #1e25ca, #1e24b1, #1e2399, #1f2181);
+		width: 300px;
+		height: 52px;
+		border: none;
+		border-radius: 4px;
+		color: white !important;
+		transition: 0.5s;
+    	background-size: 200% auto;
+	}
+	.submit-form input:hover{
+		background-image: linear-gradient(to left, #1f2181, #1e25ca, #1e24b1, #1e25ca, #1f2181);
+		background-position: right center;
+	}
+	.contact-form{
+		margin: 0 auto;
 	}
 /*End Desktop Css*/
 
@@ -365,6 +471,34 @@
 	.slick-slide img{
 		display: inline-block !important;
 	}
+	.founder-img{
+		width: 35% !important;
+	}
+	.say-text{
+		padding: 120px 30px 45px 30px;
+	}
+	.testimonials .slick-dots{
+		bottom: -55px !important;
+	}
+	.contact-left{
+		display: none;
+	}
+	.contact-mobile{
+		font-size: 32px;
+		font-family: proximaNovaSemiBold;
+
+	}
+	.contact-mobile strong{
+		font-family: proximaNovaBold;
+		color: #1F2181;
+	}
+	#contact-left{
+		display: none !important;
+	}
+	.contact-form{
+		position: relative !important;
+		left: 0px !important;
+	}
 
 
 
@@ -427,6 +561,9 @@
 	.service img{
 		width: 55% !important;
 	} 
+	.say-text{
+		margin-top: -50px;
+	}
 	
 
 }
@@ -452,6 +589,14 @@
 	    transform: translate(5%,-50%);
 	}
 }
+@media only screen and (min-width: 1084px) {
+    .banner-cnt {
+	    position: absolute;
+	    top: 50%;
+	    margin: auto;
+	    transform: translate(17%,-50%);
+	}
+}
 
 /*slicker css*/
 .slider {
@@ -475,5 +620,11 @@
 
 .slick-dotted .slick-current img {
   transform: scale(1.1);
+}
+.testimonials .slick-dots{
+	bottom: 20px;
+}
+.testimonials .slick-slide {
+  margin: -18px 0px !important;
 }
 
